--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "linebreak-style": 0,
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-nested-ternary": "off",
+    "import/prefer-default-export": "off"
   }
 }
