--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,6 @@
     "react/prop-types": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "linebreak-style": 0,
-    "react/prop-types": "off",
-    "no-nested-ternary": "off",
-    "import/prefer-default-export": "off"
+    "no-nested-ternary": "off"
   }
 }
