--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
     "http-proxy-middleware": "^2.0.6",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
@@ -16,6 +17,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "socket.io-client": "^4.6.2",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.0.0-rc.1",
     "styled-reset": "^4.4.7",
     "swr": "^2.1.5",
